--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
+  <head>
   <title>
-    This is an example </title>
+    This is an example </title></head>
   <body> 
     this is an example html page 
   </body>
