--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <title>
     This is an example </title></head>
   <body> 
+    <h1>
+      an example page <h1>
     this is an example html page 
   </body>
 </html>
